--- a/source/sass/blocks/download.scss
+++ b/source/sass/blocks/download.scss
@@ -47,6 +47,8 @@
   }
 
   .download__header {
+    max-width: 100%;
+
     @supports (display: grid) {
       grid-area: 1 / 1 / 4 / 2;
     }
